--- a/WebContent/NewFile.html
+++ b/WebContent/NewFile.html
@@ -5,6 +5,13 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	<h1>bonjour</h1>
+	
+	
+	<p>
+	partie Maxime je travail bcp! 
+	</p>
+	
+	
 </body>
 </html>
