--- a/WebContent/NewFile.html
+++ b/WebContent/NewFile.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<<<<<<< HEAD
+
 	<h1>bonjour</h1>
 	
 	
@@ -14,8 +14,11 @@
 	</p>
 	
 	
-=======
   <p> bonjour zknekznadkjanznknjz </p>
->>>>>>> e0bdb3344c674b76d4ad276f373e3ec397fc2c73
+  
+  <p> je continue de travail </p>
+  
+
+
 </body>
 </html>
