sauvegarde du html

--- a/WebContent/NewFile.html
+++ b/WebContent/NewFile.html
@@ -5,8 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-<<<<<<< HEAD
-	<h1>bonjour</h1>
+
+	<h1>Ceci est un test, encore</h1>
 	
 	
 	<p>
@@ -14,8 +14,8 @@
 	</p>
 	
 	
-=======
+
   <p> bonjour zknekznadkjanznknjz </p>
->>>>>>> e0bdb3344c674b76d4ad276f373e3ec397fc2c73
+
 </body>
 </html>
