sauvegarde test nb deux

--- a/WebContent/NewFile.html
+++ b/WebContent/NewFile.html
@@ -6,28 +6,8 @@
 </head>
 <body>
 
-<<<<<<< HEAD
-	<h1>Ceci est un test, encore</h1>
-=======
-	<h1>bonjour</h1>
->>>>>>> db5f095f87389c9b4dc69705f2b10136003e0352
-	
-	
-	<p>
-	partie Maxime je travail bcp! 
-	</p>
-	
-	
-<<<<<<< HEAD
 
-  <p> bonjour zknekznadkjanznknjz </p>
-=======
-  <p> bonjour zknekznadkjanznknjz </p>
-  
-  <p> je continue de travail </p>
-  
-
->>>>>>> db5f095f87389c9b4dc69705f2b10136003e0352
+	<h1>Je test un nouveau truc</h1>
 
 </body>
 </html>
